dc-base/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-oc3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-oc3
  template:
    metadata:
      labels:
        app: storage-oc3
    spec:
      containers:
      - name: storage-oc3
        image: oydeu/dc-base:latest
        ports:
        - containerPort: 3000
