dc-base/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: storage-oc3
spec:
  selector:
    app: storage-oc3
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
