dc-base/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-oc3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - storage-oc3.data-container.net
    secretName: storage-oc3-tls
  rules:
  - host: storage-oc3.data-container.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: storage-oc3
            port:
              number: 80
